--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -4,7 +4,7 @@
     </mat-card-title>
 
     <mat-card-content>
-        <form [formGroup]="productForm" (ngSubmit)="save()" fxLayout="column" fxLayoutAlign="space-between">
+        <form [formGroup]="productForm" (ngSubmit)="save()" fxLayout="column" fxLayoutAlign="space-between" #form="ngForm">
             <input type="hidden" formControlName="_id">
 
             <mat-form-field>
